<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_action_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/nav_class"
        android:icon="@drawable/ic_favorite_full"
        android:title="@string/title_favorites" />
    <item
        android:id="@+id/nav_notes"
        android:icon="@drawable/ic_bluenote"
        android:title="@string/title_my_notes" />
    <item
        android:id="@+id/nav_tickets"
        android:icon="@drawable/ic_blueticket"
        android:title="@string/title_my_tickets" />
    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_action_profile"
        android:title="@string/title_profile" />

    <item android:id="@+id/nav_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/title_settings"/>

    <item android:id="@+id/nav_logout"
        android:icon="@drawable/ic_action_logout"
        android:title="@string/title_logout"/>
</menu>