<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.student.pro.prostudent.Activities.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_homesettings"
        android:title="@string/pref_header_home" />

    <header
        android:fragment="com.student.pro.prostudent.Activities.SettingsActivity$NotesPreferenceFragment"
        android:icon="@drawable/ic_bluenote"
        android:title="@string/pref_header_notes" />

    <header
        android:fragment="com.student.pro.prostudent.Activities.SettingsActivity$TicketsPreferenceFragment"
        android:icon="@drawable/ic_blueticket"
        android:title="@string/pref_header_tickets" />

</preference-headers>
