<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context="com.student.pro.prostudent.Activities.RegisterActivity">

    <Button
        android:id="@+id/reg_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/roundbuttonaccent"
        android:fontFamily="@font/montserrat"
        android:text="@string/action_create_account"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_above="@+id/reg_confirm"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="64dp"
        app:layout_constraintBottom_toTopOf="@+id/reg_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="400dp"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="275dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/reg_surname">

                <RadioButton
                    android:id="@+id/radio_professor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/select_status_1" />

                <RadioButton
                    android:id="@+id/radio_student"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/select_status_2" />
            </RadioGroup>

            <EditText
                android:id="@+id/reg_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/prompt_username"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDarkTransparent"
                app:layout_constraintBottom_toTopOf="@+id/reg_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_conversion_absoluteHeight="46dp"
                tools:layout_conversion_absoluteWidth="384dp" />

            <EditText
                android:id="@+id/reg_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDarkTransparent"
                app:layout_constraintBottom_toTopOf="@+id/reg_confirm_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_conversion_absoluteHeight="46dp"
                tools:layout_conversion_absoluteWidth="384dp" />

            <EditText
                android:id="@+id/reg_confirm_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/prompt_confirm_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDarkTransparent"
                app:layout_constraintBottom_toTopOf="@+id/reg_pass"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_conversion_absoluteHeight="46dp"
                tools:layout_conversion_absoluteWidth="384dp" />

            <EditText
                android:id="@+id/reg_pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDarkTransparent"
                app:layout_constraintBottom_toTopOf="@+id/reg_confirm_pass"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_conversion_absoluteHeight="46dp"
                tools:layout_conversion_absoluteWidth="384dp" />

            <EditText
                android:id="@+id/reg_confirm_pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/prompt_confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDarkTransparent"
                app:layout_constraintBottom_toTopOf="@+id/reg_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_conversion_absoluteHeight="46dp"
                tools:layout_conversion_absoluteWidth="384dp" />

            <EditText
                android:id="@+id/reg_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/prompt_name"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDarkTransparent"
                app:layout_constraintBottom_toTopOf="@+id/reg_surname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_conversion_absoluteHeight="46dp"
                tools:layout_conversion_absoluteWidth="384dp" />

            <EditText
                android:id="@+id/reg_surname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/prompt_surname"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDarkTransparent"
                app:layout_constraintBottom_toTopOf="@+id/radioGroup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />


        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="109dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/msg_create"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_prog" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="101dp"
        android:layout_marginStart="100dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ProgressBar
        android:id="@+id/reg_prog"

        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
