<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.student.pro.prostudent.Activities.TicketActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/ticket_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:indeterminate="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Switch
                android:id="@+id/ticket_private"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/prompt_public"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ticket_content" />

            <ImageView
                android:id="@+id/ticket_attach"
                android:layout_width="0dp"
                android:layout_height="186dp"
                android:layout_marginTop="55dp"
                android:background="@color/colorSecondaryDark"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_action_add" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/label_subject"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/ticket_title"
                app:layout_constraintTop_toBottomOf="@+id/ticket_attach" />

            <EditText
                android:id="@+id/ticket_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorPrimaryLightTransparent"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/prompt_subject"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryLight"
                android:textColorHint="@color/colorSecondaryDarkTransparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/label_question"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/ticket_content"
                app:layout_constraintTop_toBottomOf="@+id/ticket_title" />

            <EditText
                android:id="@+id/ticket_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorPrimaryLightTransparent"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/prompt_question"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:textColor="@color/colorPrimaryLight"
                android:textColorHint="@color/colorSecondaryDarkTransparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <Button
                android:id="@+id/ticket_send"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/ic_sendbutton"
                android:fontFamily="@font/montserrat"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ticket_private" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <include
            layout="@layout/navigation_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/navigation_menu">

    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>
